# google-cloud-go

./: .gitignore  .release-please-bulk-manifest.json  .release-please-individual-manifest.json  .release-please-manifest-individual.json  .release-please-manifest-submodules.json  .release-please-manifest-yoshi-submodules.json  .release-please-manifest.json  .travis.yml  AUTHORS  AurelioCortezIGoogleChrome  CHANGES.md  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  README.md  RELEASING.md  appveyor.yml  clean_test.py  client.go  cloud.go  debug.md  doc.go  errors.go  example_test.go  examples_test.go  fix.sh  fix2.sh  fix_pcu.sh  gapics.sh  gapics.txt  gcloud.go  go.mod  go.sum  go.work  go.work.sum  groups  header_test.go  home.html  index.html  key.json.enc  (+23 more)
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.gemini/: GEMINI.md  config.yaml
.github/: .OwlBot.lock.yaml  .OwlBot.yaml  CODEOWNERS  auto-label.yaml  blunderbuss.yml  header-checker-lint.md  header-checker-lint.yml  release-please.yml  release-trigger.yml  renovate.json  sync-repo-settings.yaml
.librarian/: config.yaml  state.yaml
accessapproval/: CHANGES.md  README.md  go.mod  go.sum  go_mod_tidy_hack.go
accesscontextmanager/: CHANGES.md  README.md  go.mod  go.sum
addressvalidation/: README.md  go.mod
advisorynotifications/: CHANGES.md  README.md  go.mod  go.sum
agentidentity/: CHANGES.md  README.md  go.mod  go.sum
agentplatform/: CHANGES.md  README.md  agentengines.go  agentengines_test.go  client.go  client_test.go  doc.go  example_test.go  go.mod  go.sum  helpers_test.go  license.txt  memories.go  memories_test.go  memoryrevisions.go  memoryrevisions_test.go  mock_server_test.go  replay_memory_test.go  replay_test.go  sandboxes.go  sandboxes_test.go  sessionevents.go  sessionevents_test.go  sessions.go  sessions_test.go
agentregistry/: CHANGES.md  README.md  go.mod  go.sum
ai/: CHANGES.md  README.md  go.mod  (+1 more)
internal/librariangen/testdata/generate/source/google/cloud/secretmanager/v1beta2/: BUILD.bazel  secretmanager.proto  secretmanager_v1beta2.yaml
internal/librariangen/testdata/generate/source/google/cloud/workflows/v1/: BUILD.bazel  workflows.proto
(+24747 files in other folders)
