go_proto_library(
    name = "secretmanager_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "cloud.google.com/go/secretmanager/apiv1beta2/secretmanagerpb",
    protos = [":secretmanager_proto"],
    deps = [
        "//google/api:annotations_go_proto",
        "//google/iam/v1:iam_go_proto",
    ],
)

go_gapic_library(
    name = "secretmanager_go_gapic",
    srcs = [":secretmanager_proto_with_info"],
    grpc_service_config = "secretmanager_grpc_service_config.json",
    importpath = "cloud.google.com/go/secretmanager/apiv1beta2;secretmanager",
    metadata = True,
    release_level = "beta",
    rest_numeric_enums = True,
    service_yaml = "secretmanager_v1beta2.yaml",
    transport = "grpc+rest",
    deps = [
        ":secretmanager_go_proto",
        "//google/cloud/location:location_go_proto",
        "//google/iam/v1:iam_go_proto",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
    ],
)

go_gapic_assembly_pkg(
    name = "gapi-cloud-secretmanager-v1beta2-go",
    deps = [
        ":secretmanager_go_gapic",
        ":secretmanager_go_gapic_srcjar-test.srcjar",
        ":secretmanager_go_gapic_srcjar-metadata.srcjar",
        ":secretmanager_go_gapic_srcjar-snippets.srcjar",
        ":secretmanager_go_proto",
    ],
)